feat: v0.24.0向けに保守性を改善する
